# wellness_checkin_chatbot

./: .gitattributes
wellness_checkin_chatbot/: README.md  pyproject.toml
wellness_checkin_chatbot/wellness_checkin_chatbot/: app.py  gpt2-model-finetuning.ipynb
wellness_checkin_chatbot/wellness_checkin_chatbot/data/: 163.csv  204.csv  206.csv  27.csv  48.csv  67.csv  75.csv  97.csv  counsel_chat.csv  counsel_chat_250-tokens_full.json  counselchat-data.csv  final7.csv  gpt1.csv  gpt2.csv  gpt3.csv  gpt4.csv  gpt5.csv  gpt6.csv  train.csv
wellness_checkin_chatbot/wellness_checkin_chatbot/model_checkpoint/: cached_lm_GPT2Tokenizer_128_document.txt  config.json  document.txt  generation_config.json  model.safetensors
wellness_checkin_chatbot/wellness_checkin_chatbot/model_checkpoint/checkpoint-12450/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
wellness_checkin_chatbot/wellness_checkin_chatbot/model_checkpoint/runs/Aug15_14-25-18_7705975026c1/: events.out.tfevents.1723731918.7705975026c1.34.0
